<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AccountdetailsFragment">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/f_bank_name"
                style="@style/textf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/h_bank_name"
                android:inputType="text" />

            <TextView
                android:id="@+id/err_bank_name"
                style="@style/f_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/err_bank_name_r"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/f_acc_name"
                style="@style/textf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/h_acc_name"
                android:inputType="text" />

            <TextView
                android:id="@+id/err_acc_name"
                style="@style/f_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/err_acc_name_r"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/f_acc_number"
                style="@style/textf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/h_acc_number"
                android:inputType="number" />

            <TextView
                android:id="@+id/err_acc_number"
                style="@style/f_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/err_acc_number_r"
                android:visibility="invisible" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_update_details"
            style="@style/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/update_details" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>