<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPass">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logo_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                style="@style/textf"
                android:id="@+id/f_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/h_email"
                android:inputType="textEmailAddress" />
            <TextView
                android:id="@+id/err_mail"
                style="@style/f_error"
                android:text="@string/err_mail_r"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>




        <Button
            style="@style/btn_reset_pass"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reset_pass" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10sp"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>