<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InvestActivity">
    <!--<LinearLayout-->
        <!--android:id="@+id/linearLayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->

        <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="162dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:src="@drawable/logo_green" />&ndash;&gt;-->
        <!--<TextView-->
            <!--style="@style/logo_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="@string/logo_text" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <Spinner
                android:id="@+id/investment_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

            <TextView
                android:id="@+id/err_mail"
                style="@style/f_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/err_mail_r"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/f_amount"
                style="@style/textf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/h_amount"
                android:inputType="number" />

            <TextView
                android:id="@+id/err_amount"
                style="@style/f_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/err_pass_r"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <Spinner
                android:id="@+id/paymethod_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

            <TextView
                android:id="@+id/err_paym"
                style="@style/f_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/err_paym"
                android:visibility="invisible" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_invest"
            style="@style/btn_invest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/invest" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>