<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountdetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/user" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="5dp"
                        android:src="@drawable/camera" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/f_first_name"
                        style="@style/textf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/h_first_name"
                        android:inputType="text" />

                    <!--<TextView-->
                    <!--android:id="@+id/err_bank_name"-->
                    <!--style="@style/f_error"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/err_bank_name_r"-->
                    <!--android:visibility="invisible" />-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/f_last_name"
                        style="@style/textf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/h_last_name"
                        android:inputType="text" />

                    <!--<TextView-->
                    <!--android:id="@+id/err_acc_name"-->
                    <!--style="@style/f_error"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/err_acc_name_r"-->
                    <!--android:visibility="invisible" />-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/f_email"
                        style="@style/textf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/h_email"
                        android:inputType="textEmailAddress" />

                    <!--<TextView-->
                    <!--android:id="@+id/err_acc_number"-->
                    <!--style="@style/f_error"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/err_acc_number_r"-->
                    <!--android:visibility="invisible" />-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/f_phone"
                        style="@style/textf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/h_phone"
                        android:inputType="phone" />
                </LinearLayout>

                <TextView
                    style="@style/textf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/f_bdate"
                        style="@style/textf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/h_birthdate"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Spinner
                        android:id="@+id/f_state"
                        style="@style/textf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_update_details"
                    style="@style/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Update" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>